--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
     <h1>Hawkview solution</h1>
     <p class="tagline">Optimized solution - Driven by Data</p>
 
-    <p class="quote">“Good things take time — and they’re worth the wait.”</p>
+    <p class="quote">“Anything truly valuable takes time to create, and the wait makes it worthwhile.”</p>
     <div class="divider" aria-hidden="true"></div>
 
     <footer>Launching soon</footer>
   </main>
 </body>
 </html>
+
