--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <html lang="en">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41ZHCPR3LV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41ZHCPR3LV');
+</script>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -81,4 +90,5 @@
   </main>
 </body>
 </html>
+
 
