--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     </blockquote>
 
     <!-- Button to Election Insights -->
-    <a href="tn-election-dashboard.html" 
+    <a href="Tn-election-dashboard.html" 
        class="px-6 py-3 bg-indigo-600 text-white rounded-xl shadow-lg hover:bg-indigo-700 transition">
        Click here to see insights on Tamil Nadu Election Results
     </a>
   </div>
 </body>
 </html>
+
 
