--- a/index.html
+++ b/index.html
@@ -19,17 +19,12 @@
   <div class="min-h-screen flex flex-col items-center justify-center p-6">
     <h1 class="text-4xl font-bold mb-2">Hawkview Solutions</h1>
     <p class="text-lg mb-6">Optimized solutions - Driven by Data</p>
-    <blockquote class="italic text-gray-600 mb-10">
-      “Good things take time — and they’re worth the wait.”
-    </blockquote>
-
+  
     <!-- Button to Election Insights -->
-    <a href="Tn-election-dashboard.html" 
-       class="px-6 py-3 bg-indigo-600 text-white rounded-xl shadow-lg hover:bg-indigo-700 transition">
-       Click here to see insights on Tamil Nadu Election Results
-    </a>
+    <a href="Tn-election-dashboard.html" class="btn">Click here to see the insights of Tamil Nadu Election results</a>
   </div>
 </body>
 </html>
+
 
 
