--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="hawkview-logo.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hawkview solution</title>
@@ -94,3 +95,4 @@
   </main>
 </body>
 </html>
+
