--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
       height: 2px;
       background: linear-gradient(90deg, transparent, rgba(0,0,0,0.35), transparent);
     }
+
+    .btn {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: transparent;  /* transparent background */
+    color: #ffffff;  /* white text */
+    border: 2px solid #ffffff;  /* white border */
+    border-radius: 8px;  /* rounded corners */
+    text-decoration: none;  /* remove underline */
+    font-weight: 600;
+    transition: all 0.3s ease;
+  }
+
+  .btn:hover {
+    background-color: #ffffff;  /* white background */
+    color: #0f172a;  /* dark text when hovered */
+  }
     footer {
       margin-top: 22px;
       font-size: 12px;
@@ -95,6 +112,7 @@
   </main>
 </body>
 </html>
+
 
 
 
