--- a/Tn-election-dashboard.html
+++ b/Tn-election-dashboard.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="hawkview-logo.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tamil Nadu Elections — Data Dashboard (1952–2021)</title>
@@ -241,3 +242,4 @@
   </script>
 </body>
 </html>
+
