--- a/index.html
+++ b/index.html
@@ -10,109 +10,95 @@
   gtag('config', 'G-41ZHCPR3LV');
 </script>
 
-<!doctype html>
-<html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="hawkview-logo.png">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hawkview solution</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hawkview Solutions</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/png" href="hawkview-logo.png"> <!-- Your logo favicon -->
+
   <style>
     :root {
       --bg1: #0f172a;  /* slate-900 */
       --bg2: #1e293b;  /* slate-800 */
-      --card: rgba(255,255,255,0.06);
+      --card: rgba(255, 255, 255, 0.06);
       --text: #e5e7eb; /* slate-200 */
       --accent: #38bdf8; /* sky-400 */
       --muted: #94a3b8; /* slate-400 */
     }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      color: var(--text);
-      background: radial-gradient(80rem 80rem at 10% -10%, #0ea5e9 0%, transparent 30%),
-                  radial-gradient(60rem 60rem at 110% 10%, #22d3ee 0%, transparent 35%),
-                  linear-gradient(160deg, var(--bg1), var(--bg2));
-      display: grid;
-      place-items: center;
-      padding: 24px;
-    }
-    .card {
-      width: 100%;
-      max-width: 820px;
-      background: var(--card);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255,255,255,0.12);
-      border-radius: 20px;
-      padding: 42px 32px;
-      box-shadow: 0 30px 80px rgba(0,0,0,0.35);
-      text-align: center;
-    }
-    h1 {
-      margin: 0 0 8px;
-      font-size: clamp(28px, 5vw, 48px);
-      letter-spacing: 0.5px;
-    }
-    .tagline {
-      margin: 0 0 22px;
-      font-size: clamp(16px, 2.5vw, 22px);
-      color: var(--accent);
-      font-weight: 600;
-    }
-    .quote {
-      margin: 0 auto 8px;
-      max-width: 60ch;
-      font-size: clamp(15px, 2.2vw, 18px);
-      color: var(--muted);
-      line-height: 1.6;
-    }
-    .divider {
-      margin: 26px auto 0;
-      width: 120px;
-      height: 2px;
-      background: linear-gradient(90deg, transparent, rgba(0,0,0,0.35), transparent);
-    }
-
-    .btn {
-    display: inline-block;
-    padding: 12px 24px;
-    background-color: transparent;  /* transparent background */
-    color: #ffffff;  /* white text */
-    border: 2px solid #ffffff;  /* white border */
-    border-radius: 8px;  /* rounded corners */
-    text-decoration: none;  /* remove underline */
-    font-weight: 600;
-    transition: all 0.3s ease;
-  }
-
-  .btn:hover {
-    background-color: #ffffff;  /* white background */
-    color: #0f172a;  /* dark text when hovered */
-  }
-    footer {
-      margin-top: 22px;
-      font-size: 12px;
-      color: #a8b0bf;
-      opacity: 0.9;
-    }
   </style>
 </head>
-<body>
-  <main class="card" role="main" aria-label="Coming soon">
-    <h1>Hawkview solution</h1>
-    <p class="tagline">Optimized solution - Driven by Data</p>
+<body class="h-screen flex flex-col font-sans">
 
-    <p class="quote">“Good things take time — and they’re worth the wait.”</p>
-    <div class="divider" aria-hidden="true"></div>
-    <!-- Button to Election Insights -->
-    <a href="Tn-election-dashboard.html" class="btn">Click here to see the insights of Tamil Nadu Election results</a>
-    <footer>Data shows the real truth</footer>
+  <!-- Header (25% height, white) -->
+  <header class="h-1/4 bg-white flex items-center justify-between px-10">
+	<div>
+      <img src="hawkview-logo.png" alt="Hawkview Logo" 
+           class="h-24 w-24 rounded-full border-4 border-blue-600 shadow-md">
+    </div>
+    <div>
+      <h1 class="text-4xl font-bold text-blue-600">Hawkview Solutions</h1>
+      <p class="text-lg mt-2 italic text-gray-600">Driven by Data</p>
+    </div>
+    
+  </header>
+
+  <!-- Main content (75% height, gradient background) -->
+ <main class="h-3/4 grid grid-cols-2 grid-rows-2 gap-6 p-6"
+      style="background: linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg1));">
+
+    <!-- Sports Hawk -->
+    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
+             style="background: var(--card); color: var(--text);">
+      <h2 class="text-2xl font-semibold mb-4">Sports Hawk</h2>
+      <a href="#" 
+         class="px-6 py-2 rounded-full border transition"
+         style="color: var(--accent); border-color: var(--accent);"
+         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
+         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
+        Coming Soon
+      </a>
+    </section>
+
+    <!-- Geo Political Hawk -->
+    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
+             style="background: var(--card); color: var(--text);">
+      <h2 class="text-2xl font-semibold mb-4">Geo Political Hawk</h2>
+      <a href="Tn-election-dashboard.html" 
+         class="px-6 py-2 rounded-full border transition"
+         style="color: var(--accent); border-color: var(--accent);"
+         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
+         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
+        Tamilnadu Politics
+      </a>
+    </section>
+
+    <!-- Business Hawk -->
+    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
+             style="background: var(--card); color: var(--text);">
+      <h2 class="text-2xl font-semibold mb-4">Business Hawk</h2>
+      <a href="#" 
+         class="px-6 py-2 rounded-full border transition"
+         style="color: var(--accent); border-color: var(--accent);"
+         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
+         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
+        Coming Soon
+      </a>
+    </section>
+
+    <!-- Economics Hawk -->
+    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
+             style="background: var(--card); color: var(--text);">
+      <h2 class="text-2xl font-semibold mb-4">Economics Hawk</h2>
+      <a href="#" 
+         class="px-6 py-2 rounded-full border transition"
+         style="color: var(--accent); border-color: var(--accent);"
+         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
+         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
+        Coming Soon
+      </a>
+    </section>
+
   </main>
 </body>
 </html>
-
-
-
-
