--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
              style="background: var(--card); color: var(--text);">
       <h2 class="text-2xl font-semibold mb-4">Tamil Nadu Election Poll Survey</h2>
-      <a href="#" 
+      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone" 
          class="px-6 py-2 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
@@ -64,7 +64,7 @@
     <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
              style="background: var(--card); color: var(--text);">
       <h2 class="text-2xl font-semibold mb-4">Puducherry Election Poll Survey</h2>
-      <a href="Tn-election-dashboard.html" 
+      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone" 
          class="px-6 py-2 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
@@ -77,7 +77,7 @@
     <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
              style="background: var(--card); color: var(--text);">
       <h2 class="text-2xl font-semibold mb-4">Kerala Election Poll Survey</h2>
-      <a href="#" 
+      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone"  
          class="px-6 py-2 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
@@ -90,7 +90,7 @@
     <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-1700"
              style="background: var(--card); color: var(--text);">
       <h2 class="text-2xl font-semibold mb-4">West Bengal Election Poll Survey</h2>
-      <a href="#" 
+      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone"  
          class="px-6 py-2 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
@@ -103,7 +103,7 @@
     <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
              style="background: var(--card); color: var(--text);">
       <h2 class="text-2xl font-semibold mb-4">Assam Election Poll Survey</h2>
-      <a href="#" 
+      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone"  
          class="px-6 py-2 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
@@ -115,3 +115,4 @@
   </main>
 </body>
 </html>
+
