--- a/index.html
+++ b/index.html
@@ -44,75 +44,30 @@
   </header>
 
   <!-- Main content (75% height, gradient background) -->
- <main class="h-3/4 grid grid-cols-2 grid-rows-2 gap-6 p-6"
-      style="background: linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg1));">
-
+ <main class="h-3/4 grid grid-cols-1 grid-rows-2 gap-4 p-4"
+      style="background:  linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg1));">
+	<section  class="h-3/4 grid grid-cols-4 grid-rows-2 gap-4 p-4">
+	<img src="MK-Stalin.png" alt="stalin" class="h-40 w-50 rounded-full border-4 border-blue-600 shadow-md">
+	<img src="Edappadi-K-Palaniswami.png" alt="EPS" class="h-40 w-50 rounded-full border-4 border-blue-600 shadow-md">
+	<img src="vijay-political-party.jpg" alt="vijay" class="h-40 w-50 rounded-full border-4 border-blue-600 shadow-md">
+    <img src="Seeman.jpg" alt="seeman" class="h-40 w-50 rounded-full border-4 border-blue-600 shadow-md">
     <!-- Tamil Nadu Election Poll Survey -->
-    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
-             style="background: var(--card); color: var(--text);">
-      <h2 class="text-2xl font-semibold mb-4">Tamil Nadu Election Poll Survey</h2>
-      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone" 
-         class="px-6 py-2 rounded-full border transition"
+	 </section>
+	  <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700">
+      <h2 class="text-4xl font-bold text-purple-400">Tamil Nadu Election Poll Survey</h2>		
+      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fhawkview.in" 
+         class="px-6 py-3 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
          onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
-        Cast your Vote Prediction
+        Click here to check the Poll
       </a>
+
     </section>
 
-    <!-- Puducherry Election Poll Survey -->
-    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
-             style="background: var(--card); color: var(--text);">
-      <h2 class="text-2xl font-semibold mb-4">Puducherry Election Poll Survey</h2>
-      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone" 
-         class="px-6 py-2 rounded-full border transition"
-         style="color: var(--accent); border-color: var(--accent);"
-         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
-         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
-        Cast your Vote Prediction
-      </a>
-    </section>
-
-    <!-- Kerala Election Poll Survey -->
-    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
-             style="background: var(--card); color: var(--text);">
-      <h2 class="text-2xl font-semibold mb-4">Kerala Election Poll Survey</h2>
-      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone"  
-         class="px-6 py-2 rounded-full border transition"
-         style="color: var(--accent); border-color: var(--accent);"
-         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
-         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
-        Cast your Vote Prediction
-      </a>
-    </section>
-
-    <!-- West Bengal Election Poll Survey -->
-    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-1700"
-             style="background: var(--card); color: var(--text);">
-      <h2 class="text-2xl font-semibold mb-4">West Bengal Election Poll Survey</h2>
-      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone"  
-         class="px-6 py-2 rounded-full border transition"
-         style="color: var(--accent); border-color: var(--accent);"
-         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
-         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
-        Cast your Vote Prediction
-      </a>
-    </section>
-	
-	 <!-- Assam Election Poll Survey -->
-    <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700"
-             style="background: var(--card); color: var(--text);">
-      <h2 class="text-2xl font-semibold mb-4">Assam Election Poll Survey</h2>
-      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview.in&response_type=code&scope=email+openid+phone"  
-         class="px-6 py-2 rounded-full border transition"
-         style="color: var(--accent); border-color: var(--accent);"
-         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
-         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
-        Cast your Vote Prediction
-      </a>
-    </section>
 
   </main>
 </body>
 </html>
+
 
