--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	 </section>
 	  <section class="rounded-2xl shadow-lg flex flex-col items-center justify-center p-6 border border-slate-700">
       <h2 class="text-4xl font-bold text-purple-400">Tamil Nadu Election Poll Survey</h2>		
-      <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone" 
+      <a href="poll.html" 
          class="px-6 py-3 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
@@ -69,6 +69,7 @@
   </main>
 </body>
 </html>
+
 
 
 
