--- a/poll.html
+++ b/poll.html
@@ -70,9 +70,11 @@
           <label><input type="radio" name="q6" value="No"> No</label>
         </div>
       </section>
-<a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone"
-     class="submitButton-customizable">Submit Poll
+
+		<a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone" class="btn">
+    Submit Poll
 </a>
+
     </form>
   </main>
 
@@ -113,5 +115,6 @@
   </script>
 </body>
 </html>
+
 
 
