--- a/poll.html
+++ b/poll.html
@@ -71,13 +71,17 @@
         </div>
       </section>
 
-<a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone" 
+<!-- <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone" 
          class="px-6 py-3 rounded-full border transition"
          style="color: var(--accent); border-color: var(--accent);"
          onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
          onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
         Submit Poll
-      </a>
+      </a> -->
+
+<button type="button" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
+    Submit Poll
+</button>
 
     </form>
   </main>
@@ -119,6 +123,7 @@
   </script>
 </body>
 </html>
+
 
 
 
