--- a/poll.html
+++ b/poll.html
@@ -70,14 +70,7 @@
           <label><input type="radio" name="q6" value="No"> No</label>
         </div>
       </section>
-
-<!-- <a href="https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone" 
-         class="px-6 py-3 rounded-full border transition"
-         style="color: var(--accent); border-color: var(--accent);"
-         onmouseover="this.style.background= 'var(--accent)'; this.style.color='white';"
-         onmouseout="this.style.background= 'transparent'; this.style.color='var(--accent)';">
-        Submit Poll
-      </a> -->
+<button type="submit" class="submitButton-customizable" fdprocessedid="dxe76h" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">Submit Poll</button>
 
 <button type="button" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
     Submit Poll
@@ -123,6 +116,7 @@
   </script>
 </body>
 </html>
+
 
 
 
