--- a/poll.html
+++ b/poll.html
@@ -75,6 +75,11 @@
 <button type="button" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
     Submit Poll
 </button>
+<br>
+		<button type="button" class="submitButton-customizable"
+onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
+Submit Poll
+</button>
 
     </form>
   </main>
@@ -116,6 +121,7 @@
   </script>
 </body>
 </html>
+
 
 
 
