--- a/poll.html
+++ b/poll.html
@@ -72,7 +72,7 @@
       </section>
 <button type="submit" class="submitButton-customizable" fdprocessedid="dxe76h" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">Submit Poll</button>
 
-<button type="button" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
+<button type="submit" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
     Submit Poll
 </button>
 <br>
@@ -121,6 +121,7 @@ Submit Poll
   </script>
 </body>
 </html>
+
 
 
 
