--- a/poll.html
+++ b/poll.html
@@ -70,15 +70,15 @@
           <label><input type="radio" name="q6" value="No"> No</label>
         </div>
       </section>
-<button type="submit" class="submitButton-customizable" fdprocessedid="dxe76h" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">Submit Poll</button>
+<button type="submit" class="submitButton-customizable" fdprocessedid="dxe76h" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">Submit Poll11</button>
 
 <button type="submit" class="submitButton-customizable" onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
-    Submit Poll
+    Submit Poll22
 </button>
 <br>
 		<button type="button" class="submitButton-customizable"
 onclick="window.location.href='https://us-east-158rrqzapm.auth.us-east-1.amazoncognito.com/login?client_id=h6ao7f2ta1547ajhur92ee6p2&redirect_uri=https://hawkview-poll.s3.us-east-1.amazonaws.com/index.html&response_type=code&scope=email+openid+phone'">
-Submit Poll
+Submit Poll33
 </button>
 
     </form>
@@ -121,6 +121,7 @@ Submit Poll
   </script>
 </body>
 </html>
+
 
 
 
